AMOSParser.js
// Generated from AMOS.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import AMOSListener from './AMOSListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class AMOSParser extends antlr4.Parser {

    static grammarFileName = "AMOS.g4";
    static literalNames = [ null, "'End'", "'Rnd'", "'Screen'", "'Swap'", 
                            "'Wait'", "'Vbl'", "'Box'", "'Circle'", "'On'", 
                            "'Gosub'", "'Offset'", "'Data'", "'Read'", "'Goto'", 
                            "'Bob'", "'Update'", "'Clear'", "'Key'", "'Off'", 
                            "'Set'", "'Rainbow'", "'Speed'", "'SAM'", "'LOOP'", 
                            "'OFF'", "'BANK'", "'LED'", "'Load'", "'Sprite'", 
                            "'='", "'<>'", "'>='", "'>'", "'<='", "'<'", 
                            "'or'", "'and'", "'then'", "'Open'", "'Out'", 
                            "'In'", "'Close'", "'Input'", "'Btst'", "'Repeat'", 
                            "'Until'", "'Mouse'", "'Buffers'", "'Global'", 
                            "'Turbo'", "'Draw'", "'Locate'", "'Add'", "'Blitter'", 
                            "'Copy'", "'Limit'", "'Fill'", "'Autoback'", 
                            "'Palette'", "'Double'", "'Buffer'", "'Pen'", 
                            "'Cls'", "'Paper'", "'Degree'", "'Hide'", "'Flash'", 
                            "'Sin'", "'Cos'", "'\"\"'", "'Dim'", "'if'", 
                            "'Print'", "'Screen Open'", null, "'Lowres'", 
                            "'Hires'", "','", null, null, null, "'Curs Off'", 
                            "'Curs On'", "'Ink'", "'Text'", null, "'Do'", 
                            "'Loop'", "'For'", "'To'", "'Next'", "'If'", 
                            "'Else'", "'End If'", "'While'", "'Wend'", "'Play'", 
                            "'Procedure'", "'End Proc'", "'Bar'", "'Wait Key'", 
                            "'Key State'", null, null, "'('", "')'", "'['", 
                            "']'", "'{'", "'}'", null, "'*'", "'/'", "'+'", 
                            "'-'", "':'", "';'", "'.'", "'#'", "'%'", "'?'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, "SCREENOPEN", "NUMBER", "LOWRES", 
                             "HIRES", "COMMA", "COMMENT", "REM", "WS", "CURSOFF", 
                             "CURSON", "INK", "TEXT", "STRING", "DO", "LOOP", 
                             "FOR", "TO", "NEXT", "IF", "ELSE", "ENDIF", 
                             "WHILE", "WEND", "PLAY", "PROC", "ENDPROC", 
                             "BAR", "WAITKEY", "KEYSTATE", "IDENTIFIER", 
                             "COMPARISON", "BRACKETOPEN_PROP", "BRACKETCLOSE_PROP", 
                             "BRACKETOPEN_ARRAY", "BRACKETCLOSE_ARRAY", 
                             "BRACKETOPEN_FUNCTION", "BRACKETCLOSE_FUNCTION", 
                             "HEX_NUMBER", "MULTIPLY", "DIVIDE", "ADD", 
                             "SUBTRACT", "STATEMENT_SEPARATOR", "FINISH_AND_ADD_OTHER_STATEMENT", 
                             "DOT", "HASHTAG", "PERCENT", "QUESTION" ];
    static ruleNames = [ "expression2", "expression1", "term", "array_index_get", 
                         "factor", "program", "statement", "rndFunction", 
                         "screen_swap", "wait_vbl", "wait_key", "box", "circle", 
                         "on_gosub", "screen_offset", "choose_Screen", "data_statement", 
                         "read_statement", "read_target", "goto_label", 
                         "gosub", "bob_update_on", "clear_key", "bob_off", 
                         "value", "set_rainbow", "use_rainbow", "label_title", 
                         "key_speed", "sam_loop", "sam_bank", "led_off", 
                         "loadBank", "loadBankImgToSprite", "expressions_comparators", 
                         "or_and", "if_then", "open_out_readfile", "open_in_writefile", 
                         "close_file", "input_variable", "btst", "repeat_key", 
                         "set_buffer", "global", "turbo_draw", "locate", 
                         "add", "blitter_copy", "blitter_fill", "blitter_clear", 
                         "autoback", "palette", "double_buffer", "pen", 
                         "cls", "paper", "degree", "hide", "flash_off", 
                         "flash_on", "sin_function", "cos_function", "play_sound", 
                         "wait_key_break", "variable_starter", "function_starter", 
                         "function_call_or_array_access", "array_structure", 
                         "array_create", "array_update", "screen_open", 
                         "curs_off", "curs_on", "ink", "text", "do_loop", 
                         "while_wend", "for_loop", "if_statement", "else_statement", 
                         "if_statement_key_state", "bar", "procedure", "current_Key_State", 
                         "print_options", "print_something" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = AMOSParser.ruleNames;
        this.literalNames = AMOSParser.literalNames;
        this.symbolicNames = AMOSParser.symbolicNames;
    }



	expression2() {
	    let localctx = new Expression2Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, AMOSParser.RULE_expression2);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 174;
	        this.term();
	        this.state = 179;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===114 || _la===115) {
	            this.state = 175;
	            _la = this._input.LA(1);
	            if(!(_la===114 || _la===115)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 176;
	            this.term();
	            this.state = 181;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expression1() {
	    let localctx = new Expression1Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, AMOSParser.RULE_expression1);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 182;
	        this.term();
	        this.state = 187;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 183;
	                _la = this._input.LA(1);
	                if(!(_la===114 || _la===115)) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                }
	                this.state = 184;
	                this.term(); 
	            }
	            this.state = 189;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
	        }

	        this.state = 191;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        if(la_===1) {
	            this.state = 190;
	            this.match(AMOSParser.NUMBER);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	term() {
	    let localctx = new TermContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, AMOSParser.RULE_term);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 194;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===115) {
	            this.state = 193;
	            this.match(AMOSParser.SUBTRACT);
	        }

	        this.state = 196;
	        this.factor();
	        this.state = 201;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===112 || _la===113) {
	            this.state = 197;
	            _la = this._input.LA(1);
	            if(!(_la===112 || _la===113)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 198;
	            this.factor();
	            this.state = 203;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	array_index_get() {
	    let localctx = new Array_index_getContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, AMOSParser.RULE_array_index_get);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 204;
	        this.match(AMOSParser.IDENTIFIER);
	        this.state = 205;
	        this.match(AMOSParser.BRACKETOPEN_PROP);

	        this.state = 206;
	        this.expression1();
	        this.state = 207;
	        this.match(AMOSParser.BRACKETCLOSE_PROP);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	factor() {
	    let localctx = new FactorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, AMOSParser.RULE_factor);
	    try {
	        this.state = 220;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 209;
	            this.match(AMOSParser.NUMBER);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 210;
	            this.array_index_get();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 211;
	            this.sin_function();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 212;
	            this.cos_function();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 213;
	            this.rndFunction();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 214;
	            this.match(AMOSParser.IDENTIFIER);
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 215;
	            this.match(AMOSParser.BRACKETOPEN_PROP);
	            this.state = 216;
	            this.expression1();
	            this.state = 217;
	            this.match(AMOSParser.BRACKETCLOSE_PROP);
	            break;

	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 219;
	            this.match(AMOSParser.HEX_NUMBER);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, AMOSParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 225;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 951515050) !== 0) || ((((_la - 39)) & ~0x1f) === 0 && ((1 << (_la - 39)) & 532212857) !== 0) || ((((_la - 71)) & ~0x1f) === 0 && ((1 << (_la - 71)) & 1831172109) !== 0) || _la===103 || _la===116) {
	            this.state = 222;
	            this.statement();
	            this.state = 227;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 228;
	        this.match(AMOSParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, AMOSParser.RULE_statement);
	    try {
	        this.state = 301;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 230;
	            this.procedure();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 231;
	            this.screen_open();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 232;
	            this.curs_off();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 233;
	            this.array_update();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 234;
	            this.curs_on();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 235;
	            this.ink();
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 236;
	            this.text();
	            break;

	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 237;
	            this.do_loop();
	            break;

	        case 9:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 238;
	            this.for_loop();
	            break;

	        case 10:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 239;
	            this.if_then();
	            break;

	        case 11:
	            this.enterOuterAlt(localctx, 11);
	            this.state = 240;
	            this.if_statement_key_state();
	            break;

	        case 12:
	            this.enterOuterAlt(localctx, 12);
	            this.state = 241;
	            this.if_statement();
	            break;

	        case 13:
	            this.enterOuterAlt(localctx, 13);
	            this.state = 242;
	            this.function_starter();
	            break;

	        case 14:
	            this.enterOuterAlt(localctx, 14);
	            this.state = 243;
	            this.bar();
	            break;

	        case 15:
	            this.enterOuterAlt(localctx, 15);
	            this.state = 244;
	            this.function_call_or_array_access();
	            break;

	        case 16:
	            this.enterOuterAlt(localctx, 16);
	            this.state = 245;
	            this.variable_starter();
	            break;

	        case 17:
	            this.enterOuterAlt(localctx, 17);
	            this.state = 246;
	            this.while_wend();
	            break;

	        case 18:
	            this.enterOuterAlt(localctx, 18);
	            this.state = 247;
	            this.wait_key_break();
	            break;

	        case 19:
	            this.enterOuterAlt(localctx, 19);
	            this.state = 248;
	            this.play_sound();
	            break;

	        case 20:
	            this.enterOuterAlt(localctx, 20);
	            this.state = 249;
	            this.match(AMOSParser.T__0);
	            break;

	        case 21:
	            this.enterOuterAlt(localctx, 21);
	            this.state = 250;
	            this.match(AMOSParser.STATEMENT_SEPARATOR);
	            break;

	        case 22:
	            this.enterOuterAlt(localctx, 22);
	            this.state = 251;
	            this.array_create();
	            break;

	        case 23:
	            this.enterOuterAlt(localctx, 23);
	            this.state = 252;
	            this.print_something();
	            break;

	        case 24:
	            this.enterOuterAlt(localctx, 24);
	            this.state = 253;
	            this.flash_off();
	            break;

	        case 25:
	            this.enterOuterAlt(localctx, 25);
	            this.state = 254;
	            this.flash_on();
	            break;

	        case 26:
	            this.enterOuterAlt(localctx, 26);
	            this.state = 255;
	            this.hide();
	            break;

	        case 27:
	            this.enterOuterAlt(localctx, 27);
	            this.state = 256;
	            this.degree();
	            break;

	        case 28:
	            this.enterOuterAlt(localctx, 28);
	            this.state = 257;
	            this.paper();
	            break;

	        case 29:
	            this.enterOuterAlt(localctx, 29);
	            this.state = 258;
	            this.cls();
	            break;

	        case 30:
	            this.enterOuterAlt(localctx, 30);
	            this.state = 259;
	            this.palette();
	            break;

	        case 31:
	            this.enterOuterAlt(localctx, 31);
	            this.state = 260;
	            this.pen();
	            break;

	        case 32:
	            this.enterOuterAlt(localctx, 32);
	            this.state = 261;
	            this.double_buffer();
	            break;

	        case 33:
	            this.enterOuterAlt(localctx, 33);
	            this.state = 262;
	            this.autoback();
	            break;

	        case 34:
	            this.enterOuterAlt(localctx, 34);
	            this.state = 263;
	            this.blitter_copy();
	            break;

	        case 35:
	            this.enterOuterAlt(localctx, 35);
	            this.state = 264;
	            this.blitter_fill();
	            break;

	        case 36:
	            this.enterOuterAlt(localctx, 36);
	            this.state = 265;
	            this.blitter_clear();
	            break;

	        case 37:
	            this.enterOuterAlt(localctx, 37);
	            this.state = 266;
	            this.add();
	            break;

	        case 38:
	            this.enterOuterAlt(localctx, 38);
	            this.state = 267;
	            this.locate();
	            break;

	        case 39:
	            this.enterOuterAlt(localctx, 39);
	            this.state = 268;
	            this.turbo_draw();
	            break;

	        case 40:
	            this.enterOuterAlt(localctx, 40);
	            this.state = 269;
	            this.global();
	            break;

	        case 41:
	            this.enterOuterAlt(localctx, 41);
	            this.state = 270;
	            this.set_buffer();
	            break;

	        case 42:
	            this.enterOuterAlt(localctx, 42);
	            this.state = 271;
	            this.repeat_key();
	            break;

	        case 43:
	            this.enterOuterAlt(localctx, 43);
	            this.state = 272;
	            this.btst();
	            break;

	        case 44:
	            this.enterOuterAlt(localctx, 44);
	            this.state = 273;
	            this.open_out_readfile();
	            break;

	        case 45:
	            this.enterOuterAlt(localctx, 45);
	            this.state = 274;
	            this.close_file();
	            break;

	        case 46:
	            this.enterOuterAlt(localctx, 46);
	            this.state = 275;
	            this.open_in_writefile();
	            break;

	        case 47:
	            this.enterOuterAlt(localctx, 47);
	            this.state = 276;
	            this.input_variable();
	            break;

	        case 48:
	            this.enterOuterAlt(localctx, 48);
	            this.state = 277;
	            this.loadBank();
	            break;

	        case 49:
	            this.enterOuterAlt(localctx, 49);
	            this.state = 278;
	            this.loadBankImgToSprite();
	            break;

	        case 50:
	            this.enterOuterAlt(localctx, 50);
	            this.state = 279;
	            this.led_off();
	            break;

	        case 51:
	            this.enterOuterAlt(localctx, 51);
	            this.state = 280;
	            this.sam_bank();
	            break;

	        case 52:
	            this.enterOuterAlt(localctx, 52);
	            this.state = 281;
	            this.sam_loop();
	            break;

	        case 53:
	            this.enterOuterAlt(localctx, 53);
	            this.state = 282;
	            this.key_speed();
	            break;

	        case 54:
	            this.enterOuterAlt(localctx, 54);
	            this.state = 283;
	            this.label_title();
	            break;

	        case 55:
	            this.enterOuterAlt(localctx, 55);
	            this.state = 284;
	            this.set_rainbow();
	            break;

	        case 56:
	            this.enterOuterAlt(localctx, 56);
	            this.state = 285;
	            this.use_rainbow();
	            break;

	        case 57:
	            this.enterOuterAlt(localctx, 57);
	            this.state = 286;
	            this.bob_off();
	            break;

	        case 58:
	            this.enterOuterAlt(localctx, 58);
	            this.state = 287;
	            this.clear_key();
	            break;

	        case 59:
	            this.enterOuterAlt(localctx, 59);
	            this.state = 288;
	            this.bob_update_on();
	            break;

	        case 60:
	            this.enterOuterAlt(localctx, 60);
	            this.state = 289;
	            this.gosub();
	            break;
